--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,11 @@
   font-weight: bold;
   font-size: 20px;
 }
+
+.total_del_carro {
+  padding: 5px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  width: 252px;
+  background-color: rgb(198, 181, 160);
+}
